[metadata]
name = image-utils
summary = utils to manipulate ceph rbd image
description-file =
    README.md
author = NickelChen
author-email = nickelchen0101@gmail.com
license = Apache License, Version 2.0
classifier =
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5

[files]
packages =
    image_utils
